--- a/aframe-framework/framework-core/pom.xml
+++ b/aframe-framework/framework-core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>me.suazen</groupId>
         <artifactId>aframe-framework</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>framework-core</artifactId>
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>com.mybatis-flex</groupId>
             <artifactId>mybatis-flex-codegen</artifactId>
-            <version>1.1.8</version>
+            <version>${mybatis-flex.version}</version>
             <optional>true</optional>
         </dependency>
 
