--- a/aframe-framework/framework-security/pom.xml
+++ b/aframe-framework/framework-security/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>me.suazen</groupId>
         <artifactId>aframe-framework</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>framework-security</artifactId>
