--- a/aframe-parent/pom.xml
+++ b/aframe-parent/pom.xml
@@ -3,24 +3,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.suazen</groupId>
-    <artifactId>aframe</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>aframe-parent</artifactId>
+    <version>0.0.1</version>
     <packaging>pom</packaging>
     <name>aframe</name>
     <description>aframe</description>
-
-    <modules>
-        <module>aframe-framework</module>
-        <module>aframe-starter</module>
-        <module>aframe-system</module>
-    </modules>
 
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.7.6</spring-boot.version>
-        <mybatis-flex.version>1.1.7</mybatis-flex.version>
+        <mybatis-flex.version>1.1.8</mybatis-flex.version>
         <druid.version>1.2.17</druid.version>
         <redisson.version>3.20.1</redisson.version>
         <fastjson.version>2.0.29</fastjson.version>
@@ -33,6 +27,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -48,22 +43,6 @@
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>me.suazen</groupId>
-                <artifactId>aframe-framework</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>me.suazen</groupId>
-                <artifactId>aframe-starter</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>me.suazen</groupId>
-                <artifactId>aframe-system</artifactId>
-                <version>${project.version}</version>
             </dependency>
 
             <dependency>
@@ -97,40 +76,5 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <compilerArgs>
-                        <arg>-parameters</arg>
-                    </compilerArgs>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
-                <configuration>
-                    <mainClass>me.suazen.aframe.AframeApplication</mainClass>
-                    <skip>true</skip>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>repackage</id>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
