--- a/aframe-system/system-service/pom.xml
+++ b/aframe-system/system-service/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>me.suazen</groupId>
         <artifactId>aframe-system</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>system-service</artifactId>
