--- a/aframe-system/aframe-system-core/pom.xml
+++ b/aframe-system/aframe-system-core/pom.xml
@@ -5,16 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>me.suazen</groupId>
-        <artifactId>aframe</artifactId>
+        <artifactId>aframe-system</artifactId>
         <version>0.0.1</version>
     </parent>
 
-    <artifactId>aframe-framework</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>aframe-framework-core</module>
-        <module>aframe-framework-web</module>
-    </modules>
+    <artifactId>aframe-system-core</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -22,4 +17,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>me.suazen</groupId>
+            <artifactId>aframe-framework-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
