--- a/aframe-system/aframe-system-service/pom.xml
+++ b/aframe-system/aframe-system-service/pom.xml
@@ -5,21 +5,29 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>me.suazen</groupId>
-        <artifactId>aframe</artifactId>
+        <artifactId>aframe-system</artifactId>
         <version>0.0.1</version>
     </parent>
 
-    <artifactId>aframe-framework</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>aframe-framework-core</module>
-        <module>aframe-framework-web</module>
-    </modules>
+    <artifactId>aframe-system-service</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>me.suazen</groupId>
+            <artifactId>aframe-system-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>me.suazen</groupId>
+            <artifactId>aframe-framework-web</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
