--- a/aframe-starter/src/main/resources/application.yml
+++ b/aframe-starter/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 server:
   port: 8081
+  main:
+    allow-bean-definition-overriding: true
 spring:
   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
     url: jdbc:mysql://121.37.3.24:3306/aframe?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: admin123
@@ -11,5 +14,16 @@ spring:
     port: 6379
     password: admin123
 
+mybatis-plus:
+  mapper-locations: classpath*:mapper/*/*.xml
+  global-config:
+    db-config:
+      # 数据库类型
+      db-type: mysql
+
 restful:
   enable: true
+
+wechat:
+  appId: wxe5385dfbe65dfb59
+  secret: 724bb3aa40a87c50796075d21b1f34cf
