--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.7.6</spring-boot.version>
-        <mybatis-flex.version>1.1.8</mybatis-flex.version>
+        <mybatis-plus.version>4.0.6</mybatis-plus.version>
         <druid.version>1.2.17</druid.version>
-        <redisson.version>3.20.1</redisson.version>
+        <redisson.version>3.18.0</redisson.version>
         <fastjson.version>2.0.29</fastjson.version>
         <hutool.version>5.8.16</hutool.version>
+        <sa-token.version>1.34.0</sa-token.version>
+        <bcprov.version>1.73</bcprov.version>
     </properties>
 
     <dependencies>
@@ -43,6 +45,7 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--Springboot依赖-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -51,16 +54,34 @@
                 <scope>import</scope>
             </dependency>
 
+            <!--core依赖-->
             <dependency>
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-boot-starter</artifactId>
                 <version>${redisson.version}</version>
             </dependency>
 
+<!--            <dependency>-->
+<!--                <groupId>com.mybatis-flex</groupId>-->
+<!--                <artifactId>mybatis-flex-spring-boot-starter</artifactId>-->
+<!--                <version>${mybatis-flex.version}</version>-->
+<!--            </dependency>-->
+
             <dependency>
-                <groupId>com.mybatis-flex</groupId>
-                <artifactId>mybatis-flex-spring-boot-starter</artifactId>
-                <version>${mybatis-flex.version}</version>
+                <groupId>com.fhs-opensource</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fhs-opensource</groupId>
+                <artifactId>mybatis-plus-advance</artifactId>
+                <version>${mybatis-plus.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-annotations</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
@@ -80,6 +101,20 @@
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15to18</artifactId>
+                <version>${bcprov.version}</version>
+            </dependency>
+
+            <!--auth依赖-->
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-spring-boot-starter</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
