--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>aframe-framework</module>
         <module>aframe-system</module>
         <module>aframe-auth</module>
+        <module>aframe-module</module>
     </modules>
 
     <properties>
