用户体系分离

--- a/aframe-module/pom.xml
+++ b/aframe-module/pom.xml
@@ -21,7 +21,7 @@
     <dependencies>
         <dependency>
             <groupId>me.suazen.aframe</groupId>
-            <artifactId>aframe-web</artifactId>
+            <artifactId>aframe-auth</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
