--- a/aframe-module/echo/pom.xml
+++ b/aframe-module/echo/pom.xml
@@ -17,4 +17,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.knuddels</groupId>
+            <artifactId>jtokkit</artifactId>
+            <version>0.5.1</version>
+        </dependency>
+    </dependencies>
 </project>
