--- a/aframe-starter/src/main/resources/application.yml
+++ b/aframe-starter/src/main/resources/application.yml
@@ -1,31 +1,10 @@
+spring:
+  profiles:
+    active: dev
 server:
   port: 8081
   main:
     allow-bean-definition-overriding: true
-spring:
-  application:
-    name: aframe-starter
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://121.37.3.24:3306/aframe?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: admin123
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  redis:
-    host: 121.37.3.24
-    port: 6379
-    password: admin123
-    database: 0
-  boot:
-    admin:
-      client:
-        url: http://localhost:8080/monitor
-        username: aframeAdmin
-        password: aframeSuper123
-        instance:
-          metadata:
-            user.name: ${spring.boot.admin.client.username}
-            user.password: ${spring.boot.admin.client.password}
 
 sa-token:
   basic: ${spring.boot.admin.client.username}:${spring.boot.admin.client.password}
@@ -51,7 +30,7 @@ mybatis-plus:
       db-type: mysql
 
 restful:
-  enable: true
+  enable: false
 
 wechat:
   #公众号
@@ -60,10 +39,3 @@ wechat:
   #开放平台
 #  appId: wxe5385dfbe65dfb59
 #  secret: 724bb3aa40a87c50796075d21b1f34cf
-
-openai:
-  azure:
-    end-point: echo-gpt
-    model: gpt-35-turbo
-    version: 2023-05-15
-    api-key: 0889c689e0ec41858811af4bad2cdf16
