--- a/aframe-admin/pom.xml
+++ b/aframe-admin/pom.xml
@@ -3,13 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>me.suazen.aframe</groupId>
-        <artifactId>aframe-support</artifactId>
-        <version>0.0.1</version>
-    </parent>
 
-    <artifactId>aframe-auth</artifactId>
+    <groupId>me.suazen.aframe</groupId>
+    <version>0.0.1</version>
+    <artifactId>aframe-admin</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -20,7 +17,12 @@
     <dependencies>
         <dependency>
             <groupId>me.suazen.aframe</groupId>
-            <artifactId>aframe-web</artifactId>
+            <artifactId>aframe-auth</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>me.suazen.aframe</groupId>
+            <artifactId>aframe-system-service</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
