--- a/aframe-module/pom.xml
+++ b/aframe-module/pom.xml
@@ -4,9 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.suazen.aframe</groupId>
+    <parent>
+        <groupId>me.suazen.aframe</groupId>
+        <artifactId>aframe</artifactId>
+        <version>0.0.1</version>
+    </parent>
     <artifactId>aframe-module</artifactId>
-    <version>0.0.1</version>
     <packaging>pom</packaging>
     <modules>
         <module>echo</module>
