--- a/aframe-support/pom.xml
+++ b/aframe-support/pom.xml
@@ -4,9 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.suazen.aframe</groupId>
+    <parent>
+        <groupId>me.suazen.aframe</groupId>
+        <artifactId>aframe</artifactId>
+        <version>0.0.1</version>
+    </parent>
     <artifactId>aframe-support</artifactId>
-    <version>0.0.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -28,6 +31,7 @@
         <hutool.version>5.8.16</hutool.version>
         <sa-token.version>1.34.0</sa-token.version>
         <bcprov.version>1.73</bcprov.version>
+        <okhttp.version>4.11.0</okhttp.version>
     </properties>
 
     <dependencies>
@@ -116,6 +120,16 @@
                 <version>${sa-token.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp-sse</artifactId>
+                <version>${okhttp.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
